@@ -16,6 +16,10 @@ void cgbrle(int n);
 void cgbrlt(int n);
 void cgbrne(int n);
 void cgbrtrue(int n);
+void cgbruge(int n);
+void cgbrugt(int n);
+void cgbrule(int n);
+void cgbrult(int n);
 void cgcall(char *s);
 void cgcalr(void);
 void cgcalswtch(void);
@@ -120,6 +124,10 @@ void cgswap(void);
 void cgand(void);
 void cgxor(void);
 void cgtext(void);
+void cguge(void);
+void cgugt(void);
+void cgule(void);
+void cgult(void);
 void cgunscale(void);
 void cgunscaleby(int v);
 void cgxor(void);
