@@ -1,5 +1,5 @@
 /*
- *	NMH's Simple C Compiler, 2012
+ *	NMH's Simple C Compiler, 2012,2014
  *	realloc()
  */
 
@@ -8,14 +8,19 @@
 #include <string.h>
 
 void *realloc(void *p, int size) {
-	void	*new;
-	int	*pi, k;
+	void    *new;
+	int     k;
 
 	if ((new = malloc(size)) == NULL)
 		return NULL;
 	if (p) {
-		pi = p;
-		k = pi[-1] < size? pi[-1]: size;
+		k = ((int *) p)[-1];
+		if (k >= 0) {
+			_write(2, "bad pointer in realloc()\n", 25);
+			abort();
+		}
+		k = (-k-1) * sizeof(int);
+		if (size < k) k = size;
 		memcpy(new, p, k);
 		free(p);
 	}
